add star ship config

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -4,12 +4,12 @@ font-size = 12
 cursor-style-blink = true
 cursor-style = block_hollow
 mouse-hide-while-typing = true
+
 keybind = ctrl+shift+t=new_tab
-gtk-titlebar = true
-gtk-adwaita = true
-adw-toolbar-style = raised-border
+
 background-opacity = 0.75
+#background-blur = true
 
 window-theme = ghostty
 window-colorspace  = display-p3
-window-decoration = true
+window-decoration = client
