--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -4,7 +4,7 @@ font-size = 12
 cursor-style-blink = true
 cursor-style = block_hollow
 mouse-hide-while-typing = true
-
+window-padding-x = 12
 keybind = ctrl+shift+t=new_tab
 
 background-opacity = 0.75
