--- a/macos/dot-aerospace.toml
+++ b/macos/dot-aerospace.toml
@@ -220,4 +220,8 @@ shift-down = ['volume set 0', 'mode main']
 
 [[on-window-detected]]
 if.app-id = "com.mitchellh.ghostty"
-run = ["layout tiling"]
+run = ["layout tiling", 'move-node-to-workspace T']
+
+[[on-window-detected]]
+if.app-id = "com.jetbrains.intellij"
+run = ['move-node-to-workspace I']
