--- a/linux/dot-config/ghostty/config
+++ b/linux/dot-config/ghostty/config
@@ -1,5 +1,6 @@
 theme = catppuccin-macchiato
 font-family = "MonoLisa Variable"
+font-family = "Noto Sans"
 font-size = 12
 cursor-style-blink = true
 cursor-style = block_hollow
