--- a/macos/dot-config/ghostty/config
+++ b/macos/dot-config/ghostty/config
@@ -1,6 +1,6 @@
 theme = catppuccin-macchiato
 font-family = "MonoLisa Variable"
-font-family = "Noto Sans"
+font-family = "Noto Sans Mono"
 font-size = 14
 cursor-style-blink = true
 cursor-style = block_hollow
