--- a/linux/dot-config/ghostty/config
+++ b/linux/dot-config/ghostty/config
@@ -1,6 +1,6 @@
-theme = catppuccin-macchiato
+theme = Catppuccin Macchiato
 font-family = "MonoLisa Variable"
-font-family = "Noto Sans"
+font-family = "Noto Sans Mono CJK SC"
 font-size = 12
 cursor-style-blink = true
 cursor-style = block_hollow
